--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.6.1",
     "express": "^4.17.1",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.2.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
